--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
             <div class="hero-head">
                 <header class="navbar">
                     <div class="container navbar-start">
-                        <a class="navbar-item is-active">Design
+                        <a href="index.html" class="navbar-item is-active">Design
                     </a>
-                        <a class="navbar-item">Leaderboard
+                        <a href="leaderboard.html" class="navbar-item">Leaderboard
                     </a>
                     </div>
                 </header>
@@ -31,7 +31,7 @@
                     <div class="container">
                         <ul>
                             <li class="is-active">
-                                <a class="py-3 px-6 has-text-dark is-size-5">Configure Vechile</a>
+                                <a class="py-3 px-6 has-text-dark is-size-5">Configure Vehicle</a>
                             </li>
                         </ul>
                     </div>
@@ -40,21 +40,21 @@
         </section>
         <div class="container py-5 px-3">
             <div class="field is-horizontal">
-                <div class="field-label is-normal">
+                <div class="field-label">
                     <label class="label">Vehicle Registration</label>
                 </div>
                 <div class="field-body">
                     <div class="field">
-                        <p class="control is-expanded has-icons-left has-icons-right">
-                            <input class="input" type="text" placeholder="Company Name">
+                        <p class="control has-icons-left">
+                            <input id="cname" class="input" type="text" placeholder="Company Name">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-building"></i>
                             </span>
                         </p>
                     </div>
                     <div class="field">
-                        <p class="control is-expanded has-icons-left">
-                            <input class="input" type="text" placeholder="Designer Name">
+                        <p class="control has-icons-left">
+                            <input id="dname" class="input" type="text" placeholder="Designer Name">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-user"></i>
                             </span>
@@ -63,38 +63,56 @@
                 </div>
             </div>
             <div class="field is-horizontal">
-                <div class="field-label is-normal"></div>
+                <div class="field-label"></div>
                 <div class="field-body">
                     <div class="field">
-                        <p class="control is-expanded has-icons-left">
-                            <input class="input" type="text" placeholder="Prototype Name">
+                        <p class="control has-icons-left">
+                            <input id="pname" class="input" type="text" placeholder="Prototype Name">
                             <span class="icon is-small is-left">
-                                <i class="fas fa-user"></i>
+                                <i class="fas fa-car"></i>
                             </span>
                         </p>
                     </div>
                     <div class="field">
-                        <p class="control is-expanded has-icons-left has-icons-right">
-                            <input class="input" type="text" placeholder="Company Name">
-                            <span class="icon is-small is-left">
-                                <i class="fas fa-building"></i>
-                            </span>
-                        </p>
+                        <div class="control">
+                            <div class="select is-fullwidth">
+                                <select id="pcolor">
+                                    <option value="red">Red Paint</option>
+                                    <option value="blue">Blue Paint</option>
+                                    <option value="green">Green Paint</option>
+                                    <option value="yellow">Yellow Paint</option>
+                                    <option value="black">Black Paint</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="field is-horizontal">
                 <div class="field-label is-normal">
-                    <label class="label">Department</label>
+                    <label class="label">Tire Setup</label>
                 </div>
                 <div class="field-body">
-                    <div class="field is-narrow">
+                    <div class="field">
                         <div class="control">
                             <div class="select is-fullwidth">
-                                <select>
-                                    <option>Business development</option>
-                                    <option>Marketing</option>
-                                    <option>Sales</option>
+                                <select id="ttype">
+                                    <option value="soft">Soft Tires</option>
+                                    <option value="medium"selected>Medium Tires</option>
+                                    <option value="hard">Hard Tires</option>
+                                    <option value="inter">Intermediate Tires</option>
+                                    <option value="wet">Wet Tires</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="control">
+                            <div class="select is-fullwidth">
+                                <select id="tangle">
+                                    <option value="pos">Postive Toe</option>
+                                    <option value="zero" selected>Zero Toe</option>
+                                    <option value="neg">Negative Toe</option>
                                 </select>
                             </div>
                         </div>
@@ -103,45 +121,17 @@
             </div>
             <div class="field is-horizontal">
                 <div class="field-label">
-                    <label class="label">Already a member?</label>
-                </div>
-                <div class="field-body">
-                    <div class="field is-narrow">
-                        <div class="control">
-                            <label class="radio">
-                                <input type="radio" name="member">Yes
-        
-                            </label>
-                            <label class="radio">
-                                <input type="radio" name="member">No
-        
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="field is-horizontal">
-                <div class="field-label is-normal">
-                    <label class="label">Subject</label>
+                    <label class="label">Enable DRS?</label>
                 </div>
                 <div class="field-body">
                     <div class="field">
                         <div class="control">
-                            <input class="input is-danger" type="text" placeholder="e.g. Partnership opportunity">
-                        </div>
-                        <p class="help is-danger">This field is required
-						</p>
-                    </div>
-                </div>
-            </div>
-            <div class="field is-horizontal">
-                <div class="field-label is-normal">
-                    <label class="label">Question</label>
-                </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <textarea class="textarea" placeholder="Explain how we can help you"></textarea>
+                            <label class="radio">
+                                <input id="drs" type="radio" name="member" class="mr-2" checked>Yes
+                            </label>
+                            <label class="radio">
+                                <input type="radio" name="member" class="mr-2">No
+                            </label>
                         </div>
                     </div>
                 </div>
@@ -153,39 +143,12 @@
                 <div class="field-body">
                     <div class="field">
                         <div class="control">
-                            <button class="button is-primary">Send message
-        </button>
+                            <button class="button is-link" onsubmit="submit">Simulate Race</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </body>
-    <script>
-        const submit = function(e) {
-            // prevent default form action from being carried out
-            e.preventDefault()
-
-            const input = document.querySelector('#yourname')
-              , json = {
-                yourname: input.value
-            }
-              , body = JSON.stringify(json)
-
-            fetch('/submit', {
-                method: 'POST',
-                body
-            }).then(function(response) {
-                // do something with the reponse 
-                console.log(response)
-            })
-
-            return false
-        }
-
-        window.onload = function() {
-            const button = document.querySelector('button')
-            button.onclick = submit
-        }
-    </script>
+    <script src="js/scripts.js"></script>
 </html>
