--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,35 @@
   </head>
   <body>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      <!-- Fulfill order menu -->
+      <table id="orders">
+      </table>
+      <input type="number" id="orderNum" placeholder="Order number">
+      <button id="admin">Fulfill</button>
     </form>
+  <br>
+<!--  <form action="">-->
+<!--    &lt;!&ndash; Order Form &ndash;&gt;-->
+<!--    <select id="color">-->
+<!--      <option value="Blue">Blue</option>-->
+<!--      <option value = "Red">Red</option>-->
+<!--      <option value = "Green">Green</option>-->
+<!--    </select>-->
+<!--    <input type="number" id="quantity" placeholder="Quantity">-->
+<!--    <button id="fulfill" onClick="submitOrder()">Buy now</button>-->
+<!--  </form>-->
   </body>
   <script>
 
-  const submit = function( e ) {
+  const submitOrder = function( e ) {
     // prevent default form action from being carried out
     e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+    const color = document.getElementById( '#color' ),
+            quantity = document.getElementById('#quantity'),
+          json = { color: color.value, quantity: quantity.value},
+          body = JSON.stringify( json );
+    console.log("Submitting order");
 
     fetch( '/submit', {
       method:'POST',
@@ -30,11 +46,34 @@
     })
 
     return false
-  }
+  };
+
+  const fulfillOrder = function(e) {
+    // prevent default form action from being carried out
+    e.preventDefault()
+
+    const orderNum = document.getElementById( 'orderNum' ),
+            json = {orderNum: orderNum.value},
+            body = JSON.stringify( json );
+    console.log("Fulfilling order " + orderNum);
+
+    fetch( '/submit', {
+      method:'POST',
+      body
+    })
+            .then( function( response ) {
+              // do something with the reponse
+              console.log( response )
+            })
+
+    return false
+  };
 
   window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
+    // const orderButton = document.getElementById( '#order' ),
+            const fulfillButton = document.querySelector('button');
+            fulfillButton.onclick = fulfillOrder;
+    //         orderButton.onclick = submitOrder;
   }
 
   </script>
