--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,39 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Kite+One&family=Kufam&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <h1> Lindberg's Package Delivery Service </h1>
+    <div class="form">
+      <form id="package_form">
+        <label for="description">Item Description:</label>
+        <input type='text' id='description' placeholder="E.g: Book"><br>
+        <label for="weight">Weight (in lbs):</label>
+        <input type='number' id='weight' placeholder="2"><br>
+        <label for="deliv_date">Delivery Date (number of days from today):</label>
+        <input type='number' id='deliv_date' placeholder='3'><br>
+        <button>submit</button> <br> <br>
+      </form>      
+
+    </div>
+
+    <div class="table">
+      <table id="package_table">
+        <tr>
+          <th>Descriptions</th>
+          <th>Weight (lbs)</th>
+          <th>Days until delivery</th>
+          <th>Cost of shipment</th>
+        </tr>
+
+      </table>
+
+    </div>
+
+
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+ 
 </html>
