--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <title>A Simple To Do List- Assignment 2</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/8661aea968.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta charset="utf-8" />
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <div class="container">
+      <div class="header">
+        <h1><span class="h1">My ToDo List:</span></h1>
+        <div id="date"></div>
+      </div>
+      <div class="content">
+        <ul id="list"></ul>
+      </div>
+      <div class="add">
+        <form action="" method="get">
+          <input type="text" id="input" placeholder="Add an item" />
+          <div class="priority">
+            <input
+              type="text"
+              id="priority"
+              placeholder="Priority (1, 2 or 3)"
+            />
+          </div>
+          <div class="button">
+            <!--<input type="submit" value="">-->
+            <button>submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <script type="text/javascript" src="js/scripts.js"></script>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
