--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,79 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Cinzel:wght@500&display=swap" rel="stylesheet">
+    <script src="js/scripts.js"> </script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <h1>
+      Grocery List WebApp
+    </h1>
+    <button onclick="resetServerData()">Reset</button>
+    <br>
+    <div class="flex-container">
+      <div id="totalcount">
+        Total Count
+        <h2 id="countvalue"> 0 </h2>
+      </div>
+      <pre class="tab">  </pre>
+      <div id="totalprice">
+        Total Price
+        <h2 id="pricevalue"> $0.00 </h2>
+      </div>
+    </div>
+    
+    <br>
+    <br>
+    <form id="groceryForm"></form>
+    <table id="groceryList">
+      <tr>
+        <th> Food Name </th>
+        <th> Category </th>
+        <th> Price/Unit</th>
+        <th> Quantity </th>
+        <th> Aisle </th>
+        <th> </th>
+      </tr>
+      <tr>
+          <td>
+            <div class="tableInput">
+              <input type="text" id="foodname" form="groceryForm" placeholder="food name">
+            </div>
+          </td>
+          <td>
+            <div class="tableInput">
+              <select id="foodcategory" form="groceryForm">
+                <option value="foodcategory" selected disabled hidden>Food Category</option>
+                <option value="Baking">Baking</option>
+                <option value="Beverage">Beverage</option>
+                <option value="Canned Good">Canned Good</option>
+                <option value="Condiment">Condiment</option>
+                <option value="Dairy">Dairy</option>
+                <option value="Deli/Meat">Deli/Meat</option>
+                <option value="Frozen">Frozen</option>
+                <option value="Hygiene">Hygiene</option>
+                <option value="Paper Good">Paper Good</option>
+                <option value="Pasta/Dinner">Pasta/Dinner</option>
+                <option value="Produce">Produce</option>
+                <option value="Snack/Candy">Snack/Candy</option>
+                <option value="Other">Other</option>
+              </select>
+            </div>
+          </td>
+          <td>
+            <div class="tableInput">
+              <input type="number" id="price" form="groceryForm" placeholder="0.00">
+            </div>
+          </td>
+          <td>
+            <div class="tableInput">
+              <input type="number" id="quantity" form="groceryForm" placeholder="0">
+            </div>
+          </td>
+          <td> </td>
+        <td class="buttonColumn"><button id="addButton">Add Row</button></td>
+      </tr>
+    </table>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
