--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <script src="/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
     <h1>Alex's Training Log</h1>
     <form id="input" action="submit">
       <label for="inputRoute">Route Name</label>
