--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <th>Clicks Per Second</th>
         <th>Total Clicks</th>
         <th>Seconds</th>
-        <th>Time (H:min)</th>
+        <th>Input Time (H:min)</th>
       </tr>
 
       <tr>
@@ -59,7 +59,7 @@
         <td>105.1</td>
         <td>1051</td>
         <td>10</td>
-        <td>15:27</td>
+        <td>5:53</td>
       </tr>
 
       <tr>
@@ -68,7 +68,7 @@
         <td>5.4</td>
         <td>54</td>
         <td>10</td>
-        <td>15:27</td>
+        <td>1:19</td>
       </tr>
 
     </table>
