--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,163 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
-  </body>
-  <script>
+</head>
+<body>
+<header>Among Us Companion</header>
+<form name="myForm" onsubmit="return validateForm()" method="post" action="/startgame">
+    <h1>Select a Map</h1>
+    <div id="mapselect">
+        <label>
+            <input type="radio" class="btn" name="skeld">
+            <img src="images/SKELD_MAP.jpg" alt="skeld map">
+        </label>
+        <label>
+            <input type="radio" class="btn" name="polus">
+            <img src="images/POLUS_MAP.png" alt="polus map">
+        </label>
+        <label>
+            <input type="radio" class="btn" name="mirahq">
+            <img src="images/MIRAHQ_MAP.png" alt="mirahq map">
+        </label>
+    </div>
+    <h1>Enter Players</h1>
+    <div id="players">
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
+        <div id="playername">
+            <label>Player Name</label>
+            <input type="text" class="player" name="player1" alt="name" placeholder="player name" required minlength="1"
+                   maxlength="10"/>
+            <input type="text" class="player" name="player2" alt="name" placeholder="player name" required minlength="1"
+                   maxlength="10"/>
+            <input type="text" class="player" name="player3" alt="name" placeholder="player name" required minlength="1"
+                   maxlength="10"/>
+            <input type="text" class="player" name="player4" alt="name" placeholder="player name" required minlength="1"
+                   maxlength="10"/>
+            <input type="text" class="player" name="player5" alt="name" placeholder="player name" required minlength="1"
+                   maxlength="10"/>
+            <button id="addplayer">ADD PLAYER</button>
+        </div>
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+        <div id="playercolor">
+            <label>Player Color</label>
+            <select class='color' name="color1">
+                <option>Black</option>
+                <option>Blue</option>
+                <option>Brown</option>
+                <option>Cyan</option>
+                <option>Green</option>
+                <option>Lime</option>
+                <option>Orange</option>
+                <option>Pink</option>
+                <option>Purple</option>
+                <option>Red</option>
+                <option>White</option>
+                <option>Yellow</option>
+            </select>
+            <select class="color" name="color2">
+                <option>Black</option>
+                <option>Blue</option>
+                <option>Brown</option>
+                <option>Cyan</option>
+                <option>Green</option>
+                <option>Lime</option>
+                <option>Orange</option>
+                <option>Pink</option>
+                <option>Purple</option>
+                <option>Red</option>
+                <option>White</option>
+                <option>Yellow</option>
+            </select>
+            <select class="color" name="color3">
+                <option>Black</option>
+                <option>Blue</option>
+                <option>Brown</option>
+                <option>Cyan</option>
+                <option>Green</option>
+                <option>Lime</option>
+                <option>Orange</option>
+                <option>Pink</option>
+                <option>Purple</option>
+                <option>Red</option>
+                <option>White</option>
+                <option>Yellow</option>
+            </select>
+            <select class="color" name="color4">
+                <option>Black</option>
+                <option>Blue</option>
+                <option>Brown</option>
+                <option>Cyan</option>
+                <option>Green</option>
+                <option>Lime</option>
+                <option>Orange</option>
+                <option>Pink</option>
+                <option>Purple</option>
+                <option>Red</option>
+                <option>White</option>
+                <option>Yellow</option>
+            </select>
+            <select class="color" name="color5">
+                <option>Black</option>
+                <option>Blue</option>
+                <option>Brown</option>
+                <option>Cyan</option>
+                <option>Green</option>
+                <option>Lime</option>
+                <option>Orange</option>
+                <option>Pink</option>
+                <option>Purple</option>
+                <option>Red</option>
+                <option>White</option>
+                <option>Yellow</option>
+            </select>
+        </div>
+    </div>
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
+    <div id="start">
+        <input type="submit" id="startbutton" name="submit" value="START"/>
+    </div>
+</form>
+</body>
+<script>
 
-    return false
-  }
+    window.onload = function () {
+        console.log("Hello")
+        $(".btn").on('click', function () {
+            $(":checked").prop("checked", false)
+            $(this).prop("checked", true)
+        })
+    }
 
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
+    function validateForm() {
+        let color_values = []
+        let name_values = []
 
-  </script>
+        $(".color").map(function () {
+            color_values.push(this.value)
+        })
+        $(".player").map(function () {
+            name_values.push(this.value)
+        })
+        if (new Set(color_values).size !== color_values.length) {
+            alert("Please choose unique colors");
+            return false;
+
+        }
+        else if (new Set(name_values).size !== name_values.length){
+            alert("Please choose unique names");
+            return false;
+        }
+        else if ($(".btn:checked").length == 0){
+            alert("Please choose a map");
+            return false;
+        }
+        return true;
+    }
+
+</script>
 </html>
